dev1/app2/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app2
  name: app2
  namespace: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app2
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
