dev1/app2/app2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app2
    argocd.argoproj.io/instance: app2
  name: app2-svc
  namespace: app2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app2
status:
  loadBalancer: {}
