dev1/app2/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: app2
    namespace: app2
  spec:
    ingressClassName: nginx
    rules:
      - host: example.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: app2-svc
                  port:
                    number: 80
              path: /
    # This section is only required if TLS is to be enabled for the Ingress
    #tls:
    #  - hosts:
    #    - www.example.com
    #    secretName: nginx-tls
